feat: userService jwt check maker
