# grpc-gateway/docs/swagger.json
@@ -82,6 +82,42 @@
                     }
                 }
             }
+        },
+        "/api/v1/user-service/v1-validate-token": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "V1ValidateToken",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user_service"
+                ],
+                "summary": "V1ValidateToken",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user_service.V1ValidateTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.userServiceV1ValidateTokenResponseDto"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -110,6 +146,20 @@
                 },
                 "payload": {
                     "$ref": "#/definitions/user_service.V1LoginResponse"
+                }
+            }
+        },
+        "main.userServiceV1ValidateTokenResponseDto": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "payload": {
+                    "$ref": "#/definitions/user_service.V1ValidateTokenResponse"
                 }
             }
         },
@@ -189,6 +239,26 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/user_service.User"
+                }
+            }
+        },
+        "user_service.V1ValidateTokenRequest": {
+            "type": "object",
+            "required": [
+                "token"
+            ],
+            "properties": {
+                "token": {
+                    "description": "@gotags: validate:\"required\"",
+                    "type": "string"
+                }
+            }
+        },
+        "user_service.V1ValidateTokenResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/user_service.UserPublic"
                 }
             }
         }
