# grpc-gateway/dto_user_service.go
@@ -1,5 +1,5 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-05 23:06:56
+// Generated at: 2024-04-06 00:28:30
 
 package main
 
@@ -13,4 +13,9 @@ type userServiceV1GetAllResponseDto struct {
 type userServiceV1LoginResponseDto struct {
 	ResponseDto
 	Payload userpb.V1LoginResponse
+}
+
+type userServiceV1ValidateTokenResponseDto struct {
+	ResponseDto
+	Payload userpb.V1ValidateTokenResponse
 }
